<resources>
    <string name="app_name">TP_Interfaces_simples</string>
    <string name="start">Commencer</string>


    <string name="civilite">Civilité</string>
    <string name="mr">Monsieur</string>
    <string name="md">Madame</string>

    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="datedenaissance">Date de naissance</string>
    <string name="email">Email</string>
    <string name="adresse">Adresse postale</string>
    <string name="comm">Commentaire</string>
    <string name="valide">Validé</string>

    <string name="authentification">Authentification</string>

    <string name="sport">Sports</string>

    <string name="accueil">Accueil</string>
</resources>
